# ugraph-rs

./: Cargo.toml  build.rs
inputs/: 3_circle.poly  circle.poly  langley.poly  langley_1.poly  langley_2.poly  langley_3.poly  plain_problem.poly  quadratic.poly  sat.poly
src/: coordinate.rs  graph.rs  groebner.rs  langley.rs  linear_algebra.rs  main.rs  polynomial.rs
src/cad/: algorithm.rs  binary_search.rs  factor.rs  interval.rs  judge.rs  lift.rs  mahler.rs  matrix.rs  mod.rs  polynomial_matrix.rs  proj.rs  rational_matrix.rs  specialize.rs  specialize_polynomial.rs  sturm.rs  univariate.rs
src/parser/: ast.rs  gen_poly.rs  grammar.lalrpop  mod.rs  read_file.rs
src/polyfactor/: berlekamp.rs  big_int_poly.rs  euler.rs  factor_combination.rs  factorization.rs  hensel.rs  matrix.rs  mod.rs  poly.rs  prime.rs
