[package]
name = "unit_distance_graph"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
itertools = "0.14.0"
num = "0.4.3"
num-traits = "0.2.19"
rand = "0.10.1"
vec1 = "1.12.1"

lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.23.1"
